apicurio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apicurio
  namespace: apicurio
  labels:
    app: apicurio
spec:
  selector:
    app: apicurio
  ports:
    - port: 8080
      targetPort: 8080
